<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/solution_tv"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_above="@id/result_tv"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_above="@id/buttons_layout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/zero"
        android:autoSizeTextType="uniform"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="65sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="#F1F1F1"
        android:paddingVertical="16dp"
        android:id="@+id/buttons_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:textSize="20sp"
                app:cornerRadius="40dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:id="@+id/button_c"
                android:backgroundTint="#F44336"
                android:text="@string/c" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_open_bracket"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:backgroundTint="#A1A1A1"
                android:text="@string/open_bracket"
                android:textColor="@color/black"
                app:cornerRadius="40dp"
                tools:ignore="TextSizeCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_close_bracket"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:backgroundTint="#A1A1A1"
                android:text="@string/close_bracket"
                android:textColor="@color/black"
                app:cornerRadius="40dp"
                tools:ignore="TextSizeCheck,TextSizeCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_divide"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:backgroundTint="#FF9800"
                android:text="@string/division"
                android:textColor="#795548"
                android:textSize="20sp"
                app:cornerRadius="30dp"
                tools:ignore="TextSizeCheck,TextContrastCheck" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_7"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:text="@string/seven"
                android:textColor="#546E7A"
                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_8"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:text="@string/eight"
                android:textColor="#546E7A"
                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_9"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:text="@string/nine"
                android:textColor="#546E7A"
                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiply"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:backgroundTint="#FF9800"
                android:text="@string/star"
                android:textColor="#795548"
                app:cornerRadius="36dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_4"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:text="@string/four"
                android:textColor="#546E7A"
                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_5"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:text="@string/five"
                android:textColor="#546E7A"
                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_6"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:text="@string/six"
                android:textColor="#546E7A"
                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_plus"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:backgroundTint="#FF9800"
                android:text="@string/add"
                android:textColor="#795548"
                app:cornerRadius="40dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_1"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:text="@string/one"
                android:textColor="#546E7A"
                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_2"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:text="@string/two"
                android:textColor="#546E7A"
                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:text="@string/three"
                android:textColor="#546E7A"
                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_minus"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:backgroundTint="#FF9800"
                android:text="@string/sub"
                android:textColor="#795548"
                app:cornerRadius="40dp"
                tools:ignore="TextSizeCheck" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_ac"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:backgroundTint="#F44336"
                android:text="@string/a"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:cornerRadius="40dp"
                tools:ignore="SmallSp,TextSizeCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_0"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:text="@string/Zero"
                android:textColor="#37474F"
                android:textSize="15sp"
                app:cornerRadius="40dp"
                tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_dot"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:text="@string/point"
                android:textColor="#546E7A"
                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equals"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:backgroundTint="#FF9800"
                android:text="@string/equal"
                android:textColor="#795548"
                app:cornerRadius="40dp" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>